--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,57 @@
-	.degrade{
-		background-image: linear-gradient(45deg, rgb(127,79,190), rgb( 79,42,165 ));
-		height:100vh;
+	body {
+	   min-height: 100%;
+	   background-image: url(https://www.mathcad.com/-/media/Images/Mathcad/mathcad-9-jumbotron-1441x461.jpg?h=461&w=1441&la=pt-BR&hash=F79EF8AB9E5762D4F8A91F7A4227220C);
+	   background-size: cover;
+	   background-repeat: no-repeat;
+	   background-position: center center;
+	}
+	
+	.font{
 		color:white;
+	}
+
+    h1{
+		color:white;
+		font-size: 50px;
+	}
+
+    h2{
+		color:#4B0082;
+		font-size: 40px;
+	} 
+    .social-icons {
+		display: flex;
+		justify-content: space-around;
+		margin-top: 10px;
+		margin-left: 0px;
+		margin: 0 auto;
+		padding:5px;
+
+	}
+
+	.social-icons a {
+		color: cyan;
+		font-size: 40px;
+		margin: 0 20px;
+		
+	}
+
+	.social-icons a:hover {
+		
+		color: red; /* Ou a cor desejada para o hover */
+	}
+	.degrade{
+		
+		height:100vh;
+		color:	#7B68EE;
 		font-family:comic Sans Ms;
 		text-align:center;
 	}
 
 	.calculadora{
 		position:absolute;
-		background-color: rgb(0,0,0,0.8);
-		top: 50%;
+		background-color: rgb(0,0,0,0.1);
+		top: 55%;
 		left: 50%;
 		transform:translate( -50%,-50% );
 		border-radius:15px;
@@ -19,51 +61,57 @@
 	.botao{
 		width:50px;
 		height:50px;
-		font-size: 25px;
+		font-size: 35px;
 		border-radius:8px;
 		border:none;
 		background-color:black;
 		color:white;
 		margin:3px;
-		
 	}
 	.botao:hover{
-		background-color:blue;
-		
-	}
+	transform: scale(1.1);
+	transition: all 0.5s;
+	box-shadow: 0 0 5px red, 0 0 25px red, 0 0 50px red,
+	0 0 100px red, 0 0 200px red, 0 0 400px red;
+}
 	#resultado{
-		background-color:white;
+		background-color:#90EE90;
 		width:210px;
 		height:30px;
 		margin:5px;
 		padding:5px;
 		text-align:right;
-		color:black;
+		color:blue;
 		font-size:25px;
+		border-radius:10px;
 		}
 		
 	footer{
-	background-color:blue;
-		width:210px;
-		height:30px;
+		
+		position:center;
+		border-radius:10px;
+	    background-color:transparent;
+		width:1300px;
+		height:50px;
 		margin:5px;
 		padding:5px;
-		text-align:right;
-		color:black;
-		font-size:25px;	
-	}	
+		text-align:center;
+		height:8vh;
+		color:white;
+		font-size:17px;
+		margin-top: 5px;
+		overflow: hidden;
+		margin-left: auto; /* linha modificada */
+        margin-right: auto; /* linha adicionada */
+		}	
+	
 	<i class="fab fa-linkedin"></i>
-<i class="fab fa-facebook"></i>
- <i class="fab fa-twitter"></i>
-<i class="fab fa-github"></i>
+    <i class="fab fa-facebook"></i>
+    <i class="fab fa-twitter"></i>
+    <i class="fab fa-github"></i>
     <i class="fab fa-instagram"></i>
     <i class="fas fa-globe"></i>
     <i class="far fa-envelope"></i>
     <i class="fas fa-home"></i>
 	
-	button:hover{
-	transform: scale(1.1);
-	transition: all 0.5s;
-	box-shadow: 0 0 5px cyan, 0 0 25px cyan, 0 0 50px cyan,
-	0 0 100px cyan, 0 0 200px cyan, 0 0 400px cyan;
-}
+	
